# torch_model_loader

./: CLAUDE.md  CMakeLists.txt  README.md  package.xml
config/: params.yaml
launch/: model_loader_launch.py
models/: array_net_model_cpu.pt  array_net_model_cuda.pt  pytorch_model_save.ipynb
msg/: Model.msg
src/: CMakeLists.txt  minimimal_publisher_node.cpp  model_loader_node.cpp
src/lib/: CMakeLists.txt  torch_model_loader.cpp  torch_model_loader.hpp
